--- a/resources/conf/enviroment.properties
+++ b/resources/conf/enviroment.properties
@@ -1,4 +1,12 @@
+#connect database
 jdbc_driverClassName=com.mysql.jdbc.Driver
-jdbc_url=jdbc:mysql://localhost:3306/likits
+jdbc_url=jdbc:mysql://localhost:3306/likits?zeroDateTimeBehavior=convertToNull
 jdbc_username=root
 jdbc_password=1111
+
+#Email
+emailSender_hostName=smtp.mxhichina.com
+emailSender_port=25
+emailSender_user=no-reply@likits.com
+emailSender_password=151206@likits
+#emailSender_auth=true
