修改成jdk1.7的代码修改

--- a/resources/conf/enviroment.properties
+++ b/resources/conf/enviroment.properties
@@ -1,8 +1,8 @@
 #connect database
 jdbc_driverClassName=com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://localhost:3306/likits?zeroDateTimeBehavior=convertToNull
-jdbc_username=root
-jdbc_password=1111
+jdbc_username=likits
+jdbc_password=likits_mysql
 
 #Email
 emailSender_hostName=smtp.mxhichina.com
