--- a/resources/conf/environment.properties
+++ b/resources/conf/environment.properties
@@ -1,8 +1,8 @@
 #connect database
 jdbc_driverClassName=com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://localhost:3306/likits?zeroDateTimeBehavior=convertToNull
-jdbc_username=ankang
-jdbc_password=nameLR9969
+jdbc_username=likits
+jdbc_password=likits_mysql
 
 #Email
 emailSender_hostName=smtp.mxhichina.com
